# cppback

./: .gitignore  history.txt  temp.txt
.github/workflows/: main.yml
sandbox/src/: main.cpp
sandboxes/: history.txt
sandboxes/sandbox 1/: CMakeLists.txt  conanfile.txt
sandboxes/sandbox 1/src/: main.cpp  merge.cpp
sandboxes/sandbox 4/: CMakeLists.txt
sandboxes/sandbox 4/src/: main.cpp
sandboxes/sandbox 5/: CMakeLists.txt
sandboxes/sandbox 5/build_debug/: conanbuildinfo.txt
sandboxes/sandbox 5/src/: main.cpp
sandboxes/sandbox2/: CMakeLists.txt
sandboxes/sandbox2/src/: main.cpp  merge.cpp
sandboxes/sandbox3/: CMakeLists.txt
sandboxes/sandbox3/src/: leap_year.cpp  main.cpp
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h  main.cpp  result.h
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tests.h
sprint1/problems/map_json/solution/src/: http_server.cpp  main.cpp  request_handler.cpp
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: tcp_client.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/docs/: note.txt
sprint2/problems/command_line/solution/src/: application.cpp  application.h  boost_json.cpp  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  sdk.h  tagged.h  tests.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/docs/: note.txt
sprint2/problems/game_state/solution/src/: application.cpp  application.h  json_loader.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/Docs/: note.odt  note.txt
sprint2/problems/join_game/solution/src/: http_server.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tests.h
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/logger/solution/build-debug/: conanbuildinfo.cmake  conaninfo.txt
sprint2/problems/logger/solution/build-release/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint2/problems/move_players/solution/docs/: note.odt  note.txt
sprint2/problems/move_players/solution/src/: application.cpp  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  main.cpp  request_handler.cpp  request_handler.h  tagged.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: http_server.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/time_control/solution/docs/: .~lock.note.odt#  note.txt
sprint2/problems/time_control/solution/src/: application.cpp  application.h  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint3/problems/ammo/solution/: ammo (copy).txt
sprint3/problems/find_return/solution/docs/: note.txt
sprint3/problems/find_return/solution/src/: application.cpp  application.h  collision_detector.cpp  collision_detector.h  http_server.h  json_loader.cpp  json_loader.h  loot_generator.cpp  model.cpp  model.h
sprint3/problems/find_return/solution/tests/: loot_generator_tests.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp  collision_detector.h  geom.h
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: Dockerfile
sprint3/problems/gather/solution/src/: collision_detector.cpp  collision_detector.h
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/docs/: note.txt
sprint3/problems/gen_objects/solution/src/: application.cpp  application.h  json_loader.cpp  json_loader.h  loot_generator.h  main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/instrumentation/precode/: temp.txt
sprint3/problems/instrumentation/solution/: event2dot  gmon.out  report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: book_db.cpp  book_db.h  boost_json.cpp  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/leave_game/solution/docs/: note.txt
sprint4/problems/leave_game/solution/src/: application.cpp  application.h  collision_detector.cpp  database.cpp  database.h  file_loader.cpp  geom.h  http_server.cpp  json_loader.cpp  main.cpp  model.cpp  model.h  model_serialization.h  request_handler.cpp  request_handler.h
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/problems/state_serialization/solution/docs/: note.txt
sprint4/problems/state_serialization/solution/src/: application.cpp  application.h  collision_detector.h  file_loader.cpp  file_loader.h  json_loader.cpp  logger.h  loot_generator.h  main.cpp  model.cpp  model.h  tagged.h
sprint4/problems/state_serialization/solution/tests/: loot_generator_tests.cpp  state-serialization-tests.cpp
(+53 files in other folders)
